# wallet-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/application/api/: filters.py  main.py  schemas.py
app/application/api/wallets/v1/: handlers.py  schemas.py
app/domain/: exceptions.py
app/domain/entities/: wallets.py
app/infra/database/: manager.py  models.py
app/infra/repositories/transactions/: base.py  memo_transaction_repository.py  sqlalchemy_transaction_repository.py
app/infra/repositories/wallets/: base.py  memo_wallet_repository.py  sqlalchemy_wallet_repository.py
app/logic/: initial_container.py
app/logic/exceptions/: base.py  transactions.py  wallets.py
app/logic/services/: transactions.py  wallets.py
app/logic/use_cases/: base.py
app/logic/use_cases/transactions/: create.py  get.py
app/logic/use_cases/wallets/: create.py  get.py
app/logic/validators/: transactions.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_wallets.py
app/tests/logic/: fixtures.py  test_wallets.py
